<resources>
    <string name="app_name">Telewise</string>

    <string name="title_movies">Movies</string>
    <string name="title_tv">TV Series</string>
    <string name="title_people">People</string>
    <string name="title_settings">Settings</string>

    <string name="action_retry">Retry</string>

    <string name="explicit_content">Explicit Content</string>
    <string name="movie_poster">Poster of %s</string>
    <string name="person_profile">Profile of %s</string>
    <string name="release_date">Release Date: %s</string>
    <string name="birthday">Birthday: %s</string>
    <string name="deathday">Died on %s</string>
    <string name="place_of_birth">Place of Birth: %s</string>

    <string name="transition_image">img_transition</string>
    <string name="tmdb">TMDb</string>
    <string name="imdb">IMDb</string>
    <string name="fb">Facebook</string>
    <string name="insta">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="cast">Cast</string>
    <string name="crew">Crew</string>

    <string name="default_theme">-1</string>
</resources>
