<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/layout_toolbar"
        layout="@layout/collapsible_toolbar"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <com.skydoves.androidveil.VeilLayout
                android:id="@+id/veil_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:veilLayout_shimmerEnable="true"
                app:veilLayout_veiled="true"
                tools:veilLayout_veiled="false">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_biography"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        tools:text="Robert John Downey Jr. (born April 4, 1965) is an American actor and producer. Downey made his screen debut in 1970, at the age of five, when he appeared in his father's film Pound, and has worked consistently in film and television ever since. He received two Academy Award nominations for his roles in films Chaplin (1992) and Tropic Thunder (2008).\n\nDowney Jr. is most known for his role in the Marvel Cinematic Universe as Tony Stark/Iron Man. He has appeared as the character in Iron Man (2008), The Incredible Hulk (2008), Iron Man 2 (2010), The Avengers (2012), Iron Man 3 (2013), Avengers: Age of Ultron (2015), Captain America: Civil War (2016), Spider-Man: Homecoming (2017), Avengers: Infinity War (2018), and Avengers: Endgame (2019). The character is the most notable in the Marvel Cinematic Universe, and helped transcend the franchise into the goliath that it is today."/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_place_of_birth"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        app:layout_constraintTop_toBottomOf="@id/text_biography"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:text="Place of Birth: Manhattan, New York City, New York, USA"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        app:layout_constraintTop_toBottomOf="@id/text_place_of_birth"
                        tools:text="Date of Birth: 1965-04-04"/>

                    <ImageView
                        android:id="@+id/img_person_explicit"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_explicit_40"
                        android:visibility="gone"
                        android:contentDescription="@string/explicit_content"
                        app:layout_constraintTop_toTopOf="@id/text_birthday"
                        app:layout_constraintBottom_toBottomOf="@id/text_deathday"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:visibility="visible"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_deathday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:visibility="gone"
                        app:layout_constraintTop_toBottomOf="@id/text_birthday"
                        tools:text="Date of Death: N/A"
                        tools:visibility="visible"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.skydoves.androidveil.VeilLayout>

            <com.skydoves.androidveil.VeilLayout
                android:id="@+id/veil_external_ids"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:veilLayout_shimmerEnable="true"
                app:veilLayout_veiled="true"
                tools:veilLayout_veiled="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btn_tmdb"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/ic_tmdb_48"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/tmdb" />

                    <ImageButton
                        android:id="@+id/btn_imdb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/ic_imdb_48"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/imdb"
                        android:visibility="gone"
                        tools:visibility="visible"/>

                    <ImageButton
                        android:id="@+id/btn_fb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/ic_fb_48"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/fb"
                        android:visibility="gone"
                        tools:visibility="visible"/>

                    <ImageButton
                        android:id="@+id/btn_insta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/ic_insta_48"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/insta"
                        android:visibility="gone"
                        tools:visibility="visible"/>

                    <ImageButton
                        android:id="@+id/btn_twitter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/ic_twitter_48"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/twitter"
                        android:visibility="gone"
                        tools:visibility="visible"/>

                </LinearLayout>

            </com.skydoves.androidveil.VeilLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_label_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/cast"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

            <com.skydoves.androidveil.VeilRecyclerFrameView
                android:id="@+id/veil_cast"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                app:veilFrame_layout="@layout/card_person_credits"
                app:veilFrame_veiled="true"
                app:veilFrame_shimmerEnable="true" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_label_crew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/crew"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

            <com.skydoves.androidveil.VeilRecyclerFrameView
                android:id="@+id/veil_crew"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                app:veilFrame_layout="@layout/card_person_credits"
                app:veilFrame_veiled="true"
                app:veilFrame_shimmerEnable="true"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
